# ComfyUI-FreeVC_wrapper

./: README.md  nodes.py  pyproject.toml  requirements.txt
FreeVC/: utils.py
FreeVC/configs/: d-freevc-24.json  d-freevc-s.json  d-freevc.json
FreeVC/speaker_encoder/: audio.py  params_data.py
freevc/: README.md  app.py  requirements.txt
workflow/: FreeVC basic implementation.json  FreeVC basic workflow.json  FreeVC v2 basic.json
